--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -174,7 +174,7 @@
                         <label class="fl-grow:1">
                             <span>카테고리</span>
                             <select name="ctgId">
-                                <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}">급여</option>
+                                <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}" th:selected="${i['CTG_ID'] == c['ID']}">급여</option>
                             </select>
                         </label>
                     </div>
