--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -6,9 +6,11 @@
   --color-main-1: #FFF3F7;
   --color-main-2: #E9A6B0;
   --color-main-3: #C86B85;
+  --color-main-4: #554046;
+  --color-main-5: #aa6d77;
 
   --color-sub-1: #f6a728;
-  --color-sub-2: #554046;;
+  --color-sub-2: #6e4a11;;
   --color-sub-3: #aa6d77;
 
   --color-accent-1: #F67676;
