Design:color-sub-2 색상 변수 수정

--- a/src/main/resources/static/css/inc/root.css
+++ b/src/main/resources/static/css/inc/root.css
@@ -10,7 +10,7 @@
   --color-main-5: #aa6d77;
 
   --color-sub-1: #f6a728;
-  --color-sub-2: #6e4a11;;
+  --color-sub-2: #a76e15;;
   --color-sub-3: #aa6d77;
 
   --color-accent-1: #F67676;
