--- a/src/main/resources/templates/fixed.html
+++ b/src/main/resources/templates/fixed.html
@@ -28,12 +28,12 @@
                 <span>금액</span>
                 <input type="text" name="amt">
             </label>
-            <div class="grid-fixed">
+            <div class="pmt grid-fixed">
                 <label>
                     <span>일자</span>
                     <span class="d:flex fl-grow:1 ai:center">
                         <span class="mr:2 desc fw:2">매달</span>
-                        <select name="dd">
+                        <select name="dd" class="fl-grow:1">
                             <option value="">선택안함</option>
                             <option value="1">1일</option>
                             <option value="2">2일</option>
@@ -75,8 +75,6 @@
                         <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}">저축</option>
                     </select>
                 </label>
-            </div>
-            <div class="pmt grid-fixed">
                 <label>
                     <span>결제유형</span>
                     <select name="pmtType">
@@ -151,12 +149,12 @@
                             <span>금액</span>
                             <input type="text" name="amt" th:value="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}">
                         </label>
-                        <div class="d:flex gap:8">
-                            <label class="fl-grow:1">
+                        <div class="pmt grid-fixed">
+                            <label>
                                 <span>일자</span>
                                 <span class="d:flex fl-grow:1 ai:center">
                                     <span class="mr:2 desc fw:2">매달</span>
-                                    <select name="dd">
+                                    <select name="dd" class="fl-grow:1">
                                         <option value="">선택안함</option>
                                         <option value="1" th:selected="${i['DD'] eq 1}" >1일</option>
                                         <option value="2" th:selected="${i['DD'] eq 2}">2일</option>
@@ -190,32 +188,29 @@
                                         <option value="30" th:selected="${i['DD'] eq 30}">30일</option>
                                         <option value="31" th:selected="${i['DD'] eq 31}">31일</option>
                                     </select>
-                                    <span class="mr:2 desc fw:2">일</span>
                                 </span>
                             </label>
-                            <label class="fl-grow:1">
+                            <label>
                                 <span>카테고리</span>
                                 <select name="ctgId">
                                     <option value="">선택안함</option>
                                     <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}" th:selected="${i['CTG_ID'] == c['ID']}">저축</option>
                                 </select>
                             </label>
-                        </div>
-                        <div class="d:flex gap:8 pmt">
-                            <label class="fl-grow:1">
+                            <label>
                                 <span>결제유형</span>
                                 <select name="pmtType">
                                     <option value="a">통장</option>
                                     <option value="c">카드</option>
                                 </select>
                             </label>
-                            <label class="fl-grow:1">
+                            <label>
                                 <span>통장</span>
                                 <select name="acctId">
                                     <option th:each="a:${accountList}" th:text="${a['NAME']}" th:value="${a['ID']}" th:selected="${i['ACCT_ID'] == a['ID']}">통장</option>
                                 </select>
                             </label>
-                            <label class="fl-grow:1 d:none">
+                            <label class="d:none">
                                 <span>카드</span>
                                 <select name="cardId">
                                     <option th:each="c:${cardList}" th:text="${c['NAME']}" th:value="${c['ID']}" th:selected="${i['CARD_ID'] == c['ID']}">카드</option>
