--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/budget.css">
+    <script type="module" src="/js/expnse.js" defer></script>
 </head>
 <body>
 <main layout:fragment="main">
@@ -15,68 +16,14 @@
             <h1 class="page-title">4월 지출</h1>
             <div class="icon icon:caret-right icon-color:base-5"><</div>
         </div>
-        <div class="btn btn-size:1 bg-color:main-2 fs:7">지출추가</div>
+        <div class="addBtn btn btn-size:1 bg-color:main-2 fs:7">지출추가</div>
     </div>
-
-    <section class="grid">
-       <h1 class="d:none">지출 현황</h1>
-        <div class="card">
-            <div class="title">총 지출</div>
-            <div class="value">2,300,000원</div>
-            <div class="d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
-                <span>변동지출</span>
-                <span>300,000원</span>
-            </div>
-            <a href="/fixed">
-                <div class="d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
-                    <span>고정지출</span>
-                    <span>300,000원</span>
-                </div>
-            </a>
-        </div>
-    </section>
-
-    <section class="d:flex fl-dir:column gap:6">
-        <h1 class="d:none">지출 내역</h1>
-        <div class="d:flex fl-dir:row gap:2 fs:5">
-            <div class="btn btn-size:1 btn-color:main-2">전체</div>
-            <div class="btn btn-size:1 btn:outline">식비</div>
-            <div class="btn btn-size:1 btn:outline">데이트</div>
-            <div class="btn btn-size:1 btn:outline">선물</div>
-        </div>
-        <div class="d:flex fl-dir:column gap:2">
-            <div class="as:end fs:9 pr:4">총 60,000원</div>
-            <div class="card p:4 fl-dir:row ai:center w:10p">
-                <div class="d:flex fl-dir:column ai:center gap:2" style="width: 12%; max-width: 90px">
-                    <div>04/21</div>
-                    <div class="fs:4">월</div>
-                </div>
-                <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                    <div><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7">데이트</span></div>
-                    <div class="title fw:2">명륜진사갈비</div>
-                    <div class="desc fs:5">현대 코웨이</div>
-                </div>
-                <div class="title fw:2">38,000원</div>
-            </div>
-
-            <div class="card p:4 fl-dir:row ai:center w:10p">
-                <div class="d:flex fl-dir:column ai:center gap:2" style="width: 12%; max-width: 90px">
-                    <div>04/21</div>
-                    <div class="fs:4">월</div>
-                </div>
-                <div class="fl-grow:1 d:flex fl-dir:column gap:4">
-                    <div class=""><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7">데이트</span></div>
-                    <div class="title fw:2">명륜진사갈비</div>
-                    <div class="desc fs:5">현대 코웨이</div>
-                </div>
-                <div class="title fw:2">38,000원</div>
-            </div>
-        </div>
-    </section>
-
-    <section class="card">
+    <div th:if="${param.error}" class="error-message" th:text="${param.error}">
+        오류가 발생했습니다.
+    </div>
+    <section class="add card d:none">
         <h1 class="title">지출 추가</h1>
-        <form action="/expense" method="post" class="form form:underline grid">
+        <form action="/expense?m=add" method="post" class="form form:underline grid">
             <label>
                 <span>내역</span>
                 <input type="text" name="name">
@@ -89,21 +36,133 @@
                 <span>결제일</span>
                 <input type="date" name="dd" style="cursor: pointer" onclick="this.showPicker()" th:value="${#temporals.format(#temporals.createToday(), 'yyyy-MM-dd')}">
             </label>
-            <div class="d:flex gap:8">
-                <label class="fl-grow:1">
-                    <span>결제방법</span>
-                    <select name="cardId">
-                    </select>
-                </label>
-                <label class="fl-grow:1">
+            <div class="pmt d:flex gap:8">
+                <label>
                     <span>카테고리</span>
                     <select name="ctgId">
+                        <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}">저축</option>
                     </select>
                 </label>
+                <label>
+                    <span>결제유형</span>
+                    <select name="pmtType">
+                        <option value="a">통장</option>
+                        <option value="c">카드</option>
+                    </select>
+                </label>
+                <label>
+                    <span>통장</span>
+                    <select name="acctId">
+                        <option th:each="a:${accountList}" th:text="${a['NAME']}" th:value="${a['ID']}">통장</option>
+                    </select>
+                </label>
+                <label class="d:none">
+                    <span>카드</span>
+                    <select name="cardId">
+                        <option th:each="c:${cardList}" th:text="${c['NAME']}" th:value="${c['ID']}">카드</option>
+                    </select>
+                </label>
+            </div>
+            <div class="d:flex gap:4 mt:4">
+                <span class="cnclBtn btn btn:outline fl-grow:1">취소</span>
+                <button class="btn fl-grow:1">저장</button>
             </div>
         </form>
     </section>
 
+    <section class="grid">
+       <h1 class="d:none">지출 현황</h1>
+        <div class="card">
+            <div class="title">총 지출</div>
+            <div class="value" th:text="${#numbers.formatDecimal(total, 0, 'COMMA', 0, 'POINT') + '원'}">2,300,000원</div>
+            <div class="d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
+                <span>변동지출</span>
+                <span th:text="${#numbers.formatDecimal(varTotal, 0, 'COMMA', 0, 'POINT')} + '원'">300,000원</span>
+            </div>
+            <a href="/fixed">
+                <div class="d:flex jc:space-between bd-bottom bd-color:base-3 p:2">
+                    <span>고정지출</span>
+                    <span  th:text="${#numbers.formatDecimal(fixedTotal, 0, 'COMMA', 0, 'POINT')} + '원'">300,000원</span>
+                </div>
+            </a>
+        </div>
+    </section>
+
+    <section class="d:flex fl-dir:column gap:6">
+        <h1 class="d:none">지출 내역</h1>
+        <div class="d:flex fl-dir:row gap:2 fs:5">
+            <div class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq null ? 'btn-color:main-2' :''"><a href="/expense">전체</a></div>
+            <div th:each="c:${categoryList}" class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq ${c['ID']} ? 'btn-color:main-2' :''">
+                <a th:href="@{/expense(c=${c['ID']})}" th:text="${c['NAME']}">식비</a>
+            </div>
+        </div>
+        <div class="d:flex fl-dir:column gap:2">
+            <div class="as:end fs:9 pr:4" th:text="${'총 ' + #numbers.formatDecimal(total, 0, 'COMMA', 0, 'POINT')} + '원'">총 60,000원</div>
+            <div th:each="i:${list}" class="modDiv">
+                <div class="list card p:4 fl-dir:row ai:center w:10p">
+                    <div class="d:flex fl-dir:column ai:center gap:2" style="width: 12%; max-width: 90px">
+                        <div>04/21</div>
+                        <div class="fs:4">월</div>
+                    </div>
+                    <div class="fl-grow:1 d:flex fl-dir:column gap:4">
+                        <div><span class="p:1 pl:2 pr:2 bg-color:main-1 bd-radius:3 fs:3 color:base-7" th:text="${i['CTG']}">데이트</span></div>
+                        <div class="title fw:2" th:text="${i['NAME']}">명륜진사갈비</div>
+                        <div class="desc fs:5" th:text="${i['METHOD']}">현대 코웨이</div>
+                    </div>
+                    <div class="title fw:2" th:text="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')} + '원'">38,000원</div>
+                    <div class="delBtn icon icon:x icon-size:1 as:self-start cursor:pointer pos:absolute top:1 right:1" th:data-id="${i['ID']}">삭제</div>
+                </div>
+                <section class="mod card d:none">
+                    <h1 class="title">지출 추가</h1>
+                    <form action="/expense?m=mod" method="post" class="form form:underline grid">
+                        <label>
+                            <span>내역</span>
+                            <input type="text" name="name" th:value="${i['NAME']}">
+                        </label>
+                        <label>
+                            <span>금액</span>
+                            <input type="text" name="amt" th:value="${#numbers.formatDecimal(i['AMT'], 0, 'COMMA', 0, 'POINT')}">>
+                        </label>
+                        <label>
+                            <span>결제일</span>
+                            <input type="date" name="dd" style="cursor: pointer" onclick="this.showPicker()" th:value="${#temporals.format(i['DD'], 'yyyy-MM-dd')}">
+                        </label>
+                        <div class="pmt d:flex gap:8">
+                            <label>
+                                <span>카테고리</span>
+                                <select name="ctgId">
+                                    <option th:each="c:${categoryList}" th:text="${c['NAME']}" th:value="${c['ID']}" th:selected="${i['CTG_ID'] == c['ID']}">저축</option>
+                                </select>
+                            </label>
+                            <label>
+                                <span>결제유형</span>
+                                <select name="pmtType">
+                                    <option value="a">통장</option>
+                                    <option value="c">카드</option>
+                                </select>
+                            </label>
+                            <label>
+                                <span>통장</span>
+                                <select name="acctId">
+                                    <option th:each="a:${accountList}" th:text="${a['NAME']}" th:value="${a['ID']}" th:selected="${i['ACCT_ID'] == a['ID']}">통장</option>
+                                </select>
+                            </label>
+                            <label class="d:none">
+                                <span>카드</span>
+                                <select name="cardId">
+                                    <option th:each="c:${cardList}" th:text="${c['NAME']}" th:value="${c['ID']}" th:selected="${i['CARD_ID'] == c['ID']}">카드</option>
+                                </select>
+                            </label>
+                        </div>
+                        <div class="d:flex gap:4 mt:4">
+                            <span class="cnclBtn btn btn:outline fl-grow:1">취소</span>
+                            <button class="btn fl-grow:1">저장</button>
+                        </div>
+                    </form>
+                </section>
+            </div>
+        </div>
+    </section>
 
 </main>
 </body>
