--- a/src/main/resources/templates/expense.html
+++ b/src/main/resources/templates/expense.html
@@ -91,10 +91,10 @@
     <section class="d:flex fl-dir:column gap:6">
         <h1 class="d:none">지출 내역</h1>
         <div class="d:flex fl-dir:row gap:2 fs:5">
-            <div class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq null ? 'btn-color:main-2' :''"><a href="/expense">전체</a></div>
-            <div th:each="c:${categoryList}" class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq ${c['ID']} ? 'btn-color:main-2' :''">
-                <a th:href="@{/expense(c=${c['ID']})}" th:text="${c['NAME']}">식비</a>
-            </div>
+            <a href="/expense"><div class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq null ? 'btn-color:main-2' :''">전체</div></a>
+            <a th:each="c:${categoryList}" th:href="@{/expense(c=${c['ID']})}">
+                <div  th:text="${c['NAME']}" class="btn btn-size:1 btn:outline" th:classappend="${{param.c}} eq ${c['ID']} ? 'btn-color:main-2' :''">식비</div>
+            </a>
         </div>
         <div class="d:flex fl-dir:column gap:2">
             <div class="as:end fs:9 pr:4" th:text="${'총 ' + #numbers.formatDecimal(total, 0, 'COMMA', 0, 'POINT')} + '원'">총 60,000원</div>
